Overflow Fixed on Cards

--- a/client/src/scss/components/_card.scss
+++ b/client/src/scss/components/_card.scss
@@ -10,7 +10,7 @@
   border-radius: 10px;
 
   width: 30vw;
-  height: 60vh;
+  height: 50vh;
   margin: 1em;
 
   &:hover {
@@ -25,9 +25,14 @@
   }
 
   .img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
-    width: 100%;
-    max-width: 100%;
+    width: 70%;
+    margin-left: 15%;
+    height: fit-content;
 
     .image-hover {
       position: absolute;
@@ -52,6 +57,10 @@
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
+
+    span {
+      text-align: center;
+    }
   }
 
   .btn {
